@@ -103,6 +103,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Say arch-wildcard instead of arch-alias in dpkg-architecture --help output.
   * Test suite:
     - Do not leave temporary files behind on failure or when interrupted.
+  * Add --build and --extract command aliases to dpkg-source.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
